[package]
name = "java-usdt"
version = "0.1.0"
edition = "2021"

[build-dependencies]
libbpf-cargo = "0.20.0"

[dependencies]
common = { path = "../common" }
libbpf-rs = "0.20.0"
anyhow = "1.0"
clap = { version = "4.1", features = ["derive"] }
proc-maps = "0.3.0"
byteorder = "1.4.3"
object = "0.30.3"